# gmcp

./: pyproject.toml
.github/workflows/: publish.yml
